--- a/store.html
+++ b/store.html
@@ -18,7 +18,7 @@
         //home button
         function home(){
             //document.getElementById("infocontent").innerHTML = "Hello";
-            window.open("index.php", "_parent","",true);
+            window.open("index.html", "_parent","",true);
         }
 
         //add items
