and correcting them

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
         function store(){
             //document.getElementById("infocontent").innerHTML = "Hello";
-            window.open("store.gts", "_parent","",true);
+            window.open("store.html", "_parent","",true);
         }
 
     </script>
