--- a/download.html
+++ b/download.html
@@ -28,7 +28,7 @@
     <body>
 
         <div class="preloader">
-            <img src="../gyrab/images/icon.png" alt="icon"> </img>
+            <img src="../images/icon.png" alt="icon"> </img>
         </div>
 
         <div class="noselect">
