--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <body>
 
         <div class="preloader">
-            <img src="../gyrab/images/icon.png" alt="icon"> </img>
+            <img src="../images/icon.png" alt="icon"> </img>
         </div>
 
         <div class="noselect">
